After webgl canvas resize, bindings might be lost https://bugs.webkit.org/show_bug.cgi?id=80895

Reviewed by Stephen White.

Source/WebCore:

Test: fast/canvas/webgl/texture-bindings-uneffected-on-resize.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::reshape): recover bindings after reshape.

LayoutTests:

* fast/canvas/webgl/texture-bindings-uneffected-on-resize-expected.txt: Added.
* fast/canvas/webgl/texture-bindings-uneffected-on-resize.html: Added.


Canonical link: https://commits.webkit.org/98103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110526 268f45cc-cd09-0410-ab3c-d52691b4dbfc